Start refactoring to ArtNet-4