@@ -19,10 +19,16 @@
 
 package ch.bildspur.artnet;
 
+import java.lang.reflect.InvocationTargetException;
+
 public enum NodeStyle {
-    ST_NODE(0, ArtNetNode.class), ST_SERVER(1, ArtNetServer.class), ST_MEDIA(2,
-            ArtNetNode.class), ST_ROUTER(3, ArtNetNode.class), ST_BACKUP(4,
-            ArtNetNode.class), ST_CONFIG(5, ArtNetNode.class);
+    ST_NODE(0, ArtNetNode.class),
+    ST_SERVER(1, ArtNetServer.class),
+    ST_MEDIA(2, ArtNetNode.class),
+    ST_ROUTER(3, ArtNetNode.class),
+    ST_BACKUP(4, ArtNetNode.class),
+    ST_CONFIG(5, ArtNetNode.class),
+    ST_VISUAL(6, ArtNetNode.class);
 
     private int id;
     private Class<? extends ArtNetNode> nodeClass;
@@ -35,12 +41,20 @@ public enum NodeStyle {
     public ArtNetNode createNode() {
         ArtNetNode node = null;
         try {
-            node = nodeClass.newInstance();
+            node = nodeClass.getConstructor().newInstance();
         } catch (InstantiationException e) {
             e.printStackTrace();
         } catch (IllegalAccessException e) {
             e.printStackTrace();
-        }
+        } catch (IllegalArgumentException e) {
+			e.printStackTrace();
+		} catch (InvocationTargetException e) {
+			e.printStackTrace();
+		} catch (NoSuchMethodException e) {
+			e.printStackTrace();
+		} catch (SecurityException e) {
+			e.printStackTrace();
+		}
         return node;
     }
 
